Fixed settings button active background color on mobile

--- a/src/client/css/header.css
+++ b/src/client/css/header.css
@@ -130,7 +130,7 @@ nav #svg-logout {
     padding-left: 5px;
 }
 
-nav a:hover, #settings:hover {
+nav a:hover {
     background-color: var(--header-link-hover-color);
 }
 
@@ -174,6 +174,15 @@ nav.compact-3 #svg-logout {
 
 .settings.open {
     background-color: var(--currPage-background-color);
+}
+
+.settings:hover {
+    background-color: var(--header-link-hover-color);
+}
+
+.settings:active {
+    background-color: var(--header-link-hover-color); /* Prevents blue highlight when holding finger over the gear button */
+    -webkit-tap-highlight-color: transparent; /* Prevents blue highlight */
 }
 
 .gear {
